--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ MN Software Consulting and Theoretical Networking Research to install the Linux
 operating system on an <a href="ps2_model57.jpg">IBM PS/2 model 56slc</a> with
 a 20 MHz Intel 80386 processor, 4 MB of main memory, an on-board SCSI
 controller (with klunker IBM SCSI hard disks) and an MCA 3Com network interface
-card dug out of the Information Management "computer graveyard" at The College
-of New Jersey.  After about four-plus hours of work on this machine, Slackware
+card dug out of the Information Management "computer graveyard".  
+After about four-plus hours of work on this machine, Slackware
 Linux was finally installed, and the computer was up and communicating with the
 college network.  This first networked, multi-user system was affectionately
 named "iconoclast" in homage to Emerson, Lake and Palmer's "Tarkus" album. 
