--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ The Systems Research Foundation
 <hr>
 </center>
 <br clear="all">
+<font style="font-family:sans-serif">
 <p>
 The Systems Research Foundation is a non-profit organization dedicated to pure
 research in the field of computer systems, networking and other electronic
@@ -52,6 +53,7 @@ IBM PS/2 systems with the Micro-Channel Architecture (MCA) bus are near and dear
 <p>
 <li><a href="http://www.mcamafia.de/mcapage0/mcaindex.htm">http://www.mcamafia.de/mcapage0/mcaindex.htm</a> (formerly <a href="http://members.aol.com/mcapage0/mcaindex.htm">http://members.aol.com/mcapage0/mcaindex.htm</a>, which is now a redirect)
 <li>http://www.dgmicro.com/mca/ (link dead)
+</font>
 <br clear="all">
 <br>
 <br>
@@ -60,7 +62,7 @@ IBM PS/2 systems with the Micro-Channel Architecture (MCA) bus are near and dear
 <center>
 <table border=0 cellpadding=0 cellspacing=0>
 <tr><td>
-<font style="font:9pt Courier New, Courier">
+<font style="font:10pt Courier New, Courier">
 &copy;1998-2016, The Systems Research Foundation<br>
 &copy;1995-2016, MN Software Consulting<br>
 &copy;2001-2016, Open System Laboratories<br>
