--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ The Systems Research Foundation
 <hr>
 </center>
 <br clear="all">
-<font style="font-family:sans-serif">
+<font style="font-family:serif">
 <p>
 The Systems Research Foundation is a non-profit organization dedicated to pure
 research in the field of computer systems, networking and other electronic
