--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ material", as many might believe.
 <p>
 IBM PS/2 systems with the Micro-Channel Architecture (MCA) bus are near and dear to our hearts.  Although they have caused great amounts of annoyance, headaches and hand-wringing in our own personal experience (as in trying to get three 300 MiB SCSI hard disks to all work together), if you finally do wrestle the beasts into submission, you feel like you've really accomplished something.  (Even if all you have to show for it is a relatively slow 386 or 486 GNU/Linux system!)  I still personally find it amazing that we were ever able to get these systems going at all.
 <p>
-<li><a href="http://www.mcamafia.de/mcapage0/mcaindex.htm">http://www.mcamafia.de/mcapage0/mcaindex.htm</a> (formerly <a href="http://members.aol.com/mcapage0/mcaindex.htm">http://members.aol.com/mcapage0/mcaindex.htm</a>, which is now a redirect)
-<li>http://www.dgmicro.com/mca/ (link dead)
+   <li><a href="http://www.mcamafia.de/mcapage0/mcaindex.htm">http://www.mcamafia.de/mcapage0/mcaindex.htm</a>
+   <li><a href="http://ps2page.tripod.com">http://ps2page.tripod.com</a>
 <br clear="all">
 <br>
 <br>
