--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@ The Systems Research Foundation
 <hr>
 </center>
 <br clear="all">
-<p>
-The Systems Research Foundation is a non-profit organization dedicated to pure
+<p>The Systems Research Foundation is a non-profit organization dedicated to pure
 research in the field of computer systems, networking and other electronic
 devices.  Presently, we are studying the areas of microcomputer operating
 systems of various hardware architectures and the networking of these
 machines.  We are continually researching into the effective use of older
-microcomputer hardware in today's networked and multi-user environments.
-<p>
-Our inventory consists of 12 microcomputers of both x86 (IA-32) and PowerPC
+microcomputer hardware in today's networked and multi-user environments.</p>
+
+<p>Our inventory consists of 12 microcomputers of both x86 (IA-32) and PowerPC
 architectures.  We aim to augment this inventory with Alpha and SPARC
 acquisitions in the future.  The operating systems currently used within the
 Systems Research Foundation are Linux, OpenBSD, Mac OS and Windows.  In the
 past we have also used FreeBSD and NetBSD, in addition to having supplemental
-experience on Solaris, MPE/XL, HP-UX and OpenVMS.
-<p>
-The Systems Research Foundation was founded in 1998 on the combined efforts of
+experience on Solaris, MPE/XL, HP-UX and OpenVMS.</p>
+
+<p>The Systems Research Foundation was founded in 1998 on the combined efforts of
 MN Software Consulting and Theoretical Networking Research to install the Linux
 operating system on an <a href="ps2_model57.jpg">IBM PS/2 model 56slc</a> with
 a 20 MHz Intel 80386 processor, 4 MB of main memory, an on-board SCSI
@@ -41,14 +40,18 @@ college network.  This first networked, multi-user system was affectionately
 named "iconoclast" in homage to Emerson, Lake and Palmer's "Tarkus" album. 
 From that day forward, it has been a major tenet of The Systems Research
 Foundation that older computer hardware is not necessarily "paperweight
-material", as many might believe.
-<p>
-<b>PS/2 and Micro-Channel links of interest</b>
-<p>
-IBM PS/2 systems with the Micro-Channel Architecture (MCA) bus are near and dear to our hearts.  Although they have caused great amounts of annoyance, headaches and hand-wringing in our own personal experience (as in trying to get three 300 MiB SCSI hard disks to all work together), if you finally do wrestle the beasts into submission, you feel like you've really accomplished something.  (Even if all you have to show for it is a relatively slow 386 or 486 GNU/Linux system!)  I still personally find it amazing that we were ever able to get these systems going at all.
-<p>
+material", as many might believe.</p>
+
+<p><b>PS/2 and Micro-Channel links of interest</b></p>
+
+<p>IBM PS/2 systems with the Micro-Channel Architecture (MCA) bus are near and dear to our hearts.  Although they have caused great amounts of annoyance, headaches and hand-wringing in our own personal experience (as in trying to get three 300 MiB SCSI hard disks to all work together), if you finally do wrestle the beasts into submission, you feel like you've really accomplished something.  (Even if all you have to show for it is a relatively slow 386 or 486 GNU/Linux system!)  I still personally find it amazing that we were ever able to get these systems going at all.</p>
+
+<p>By this point, there are not many PS/2 or MCA sites left on the web, but these have hung in there:</p>
+<ul>
    <li><a href="http://www.mcamafia.de/mcapage0/mcaindex.htm">http://www.mcamafia.de/mcapage0/mcaindex.htm</a>
    <li><a href="http://ps2page.tripod.com">http://ps2page.tripod.com</a>
+</ul>
+
 <br clear="all">
 <br>
 <br>
